crates/meilisearch/tests/vector/snapshots/mod.rs/add_remove_one_vector_4588/document-deleted.snap
---
source: crates/meilisearch/tests/vector/mod.rs
---
{
  "uid": "[uid]",
  "batchUid": "[batch_uid]",
  "indexUid": "doggo",
  "status": "failed",
  "type": "documentAdditionOrUpdate",
  "canceledBy": null,
  "details": {
    "receivedDocuments": 1,
    "indexedDocuments": 0
  },
  "error": {
    "message": "Index `doggo`: Invalid vector dimensions: expected: `3`, found: `0`.",
    "code": "invalid_vector_dimensions",
    "type": "invalid_request",
    "link": "https://docs.meilisearch.com/errors#invalid_vector_dimensions"
  },
  "duration": "[duration]",
  "enqueuedAt": "[date]",
  "startedAt": "[date]",
  "finishedAt": "[date]"
}
