crates/meilisearch/tests/vector/snapshots/mod.rs/add_remove_one_vector_4588/settings-processed.snap
---
source: crates/meilisearch/tests/vector/mod.rs
---
{
  "uid": "[uid]",
  "batchUid": "[batch_uid]",
  "indexUid": "doggo",
  "status": "succeeded",
  "type": "settingsUpdate",
  "canceledBy": null,
  "details": {
    "embedders": {
      "manual": {
        "source": "userProvided",
        "dimensions": 3
      }
    }
  },
  "error": null,
  "duration": "[duration]",
  "enqueuedAt": "[date]",
  "startedAt": "[date]",
  "finishedAt": "[date]"
}
